# Haskell-Coq-Base

./: .gitignore  HaskellCoqBase.cabal  README.md  Setup.hs
coq/: CoqMain.v
extraction/: extraction.v
src/: Main.hs
